# collegeExercises

base64/: CMakeLists.txt  main.c
base64/exlib/b64/: b64.c  b64.h
base64/lib/: de_base64.c  de_base64.h
base64/tests/: tests.cpp
base64/tests/test_files/: 3  4  5  d_1  d_2  d_3  d_4  d_5  d_6
biologist/: CMakeLists.txt  README.md  main.cpp
biologist/src/: Dna.cpp  Dna.h  Rna.cpp  Rna.h
biologist/tests/: tests.cpp
commi/: CMakeLists.txt  main.cpp
commi/src/: CMakeLists.txt  agent.cpp  agent.h  worker.cpp  worker.h
cowstring/: CMakeLists.txt  NullTests.cpp  String.cpp  String.hpp  test.cpp
diff/: CMakeLists.txt  one  two
diff/src/: compare.c  compare.h  main.c
diff/test/: tests.c
dlist/: CMakeLists.txt  main.c
dlist/lib/: DList.c  DList.h
fabrique/: CMakeLists.txt  main.c  test.txt
fabrique/src/: circle.c  line.c  line.h  point.c  point.h  rect.c  rect.h
hashset/: CMakeLists.txt  debug.c  debug2.c  debug2.h
hashset/src/: set.c  set.h
magictodo/: CMakeLists.txt  README.md  bHeap example.txt  main.c  test.c
magictodo/lib/: priorityQueue.c  priorityQueue.h  todoList.c  todoList.h
matrix/: CMakeLists.txt  main.cpp
matrix/src/: CMakeLists.txt  Matrix.cpp  Matrix.h
morse/: morse.table
morse/src/: Decoder.java  Default.java  Encoder.java  MorseTable.java
quicksort/: CMakeLists.txt  main.c
quicksort/src/: file_sorts.c  file_sorts.h  msort.c  msort.h  qsort.c  qsort.h
quicksort/test_files/: TestCase31.txt  TestCase32.txt  test
rtext/: CMakeLists.txt  README.md  main.cpp  rtext.cpp  rtext.h
rtext/rtext_test/: inp.txt  out.txt  q.txt
stacc/: CMakeLists.txt  README.md  main.cpp
stacc/lib/: IOperation.cpp  IOperation.h  IOperationFactory.cpp  IOperationFactory.h  context.cpp  context.h  parser.cpp  parser.h  stack.cpp  (+2 more)
symtree/: CMakeLists.txt  README.md  main.cpp
vmla/: First.ipynb  README.md  Second.ipynb  Start.ipynb  Third.ipynb
(+42 files in other folders)
